exports[`test <Navigation /> re-renders correctly when "push" action is called 1`] = `
<View>
  <View>
    <View>
      <Card>
        <Text>
          Index
        </Text>
      </Card>
    </View>
  </View>
</View>
`;

exports[`test <Navigation /> re-renders correctly when "push" action is called 2`] = `
<View>
  <View>
    <View>
      <Card>
        <Text>
          Index
        </Text>
      </Card>
      <Card>
        <Text>
          Hello
        </Text>
      </Card>
    </View>
  </View>
</View>
`;

exports[`test <Navigation /> re-renders correctly when "replace" action is called 1`] = `
<View>
  <View>
    <View>
      <Card />
      <Card>
        <Text>
          Hello
        </Text>
      </Card>
    </View>
  </View>
</View>
`;

exports[`test <Navigation /> re-renders correctly when "replace" action is called 2`] = `
<View>
  <View>
    <View>
      <Card />
      <Card>
        <Text>
          Goodbye
        </Text>
      </Card>
    </View>
  </View>
</View>
`;

exports[`test <Navigation /> renders correctly 1`] = `
<View>
  <View>
    <View>
      <Card>
        <Text>
          Index
        </Text>
      </Card>
    </View>
  </View>
</View>
`;

exports[`test <Navigation /> renders correctly with initialIndex and initialEntries prop  1`] = `
<View>
  <View>
    <View>
      <Card />
      <Card>
        <Text>
          Hello
        </Text>
      </Card>
      <Card />
    </View>
  </View>
</View>
`;
